--- a/src/sass/partials/_typography.scss
+++ b/src/sass/partials/_typography.scss
@@ -42,6 +42,12 @@ a.button {
   letter-spacing: 0.15em;
 }
 
+.button {
+  @include media-breakpoint-down(sm) {
+    font-size: 0.75rem;
+  }
+}
+
 .icon {
   &--small {
     font-size: 1em;
